Fix double-addref leak of stylesheets.  b=49648  r=mjudge